# minimal_api

./: README.md  main.py  pyproject.toml
