[tool.poetry]
name = "minimal-api"
version = "0.1.0"
description = "A minimal rest API"
authors = ["Gbenga Adeyi <adeyigbenga005@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "minimal_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
